--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: '3'
 services:
-  #app: 
-  #  container_name: media.app
-  #  restart: always
-  #  build: .
-  #  ports:
-  #    - "${APP_PORT-3000}:3000"
-  #  depends_on:
-  #    - mongo
-  #    - redis
+  app: 
+    container_name: media.app
+    restart: always
+    build: .
+    ports:
+      - "${APP_PORT-3000}:3000"
+    depends_on:
+      - mongo
+      - redis
   mongo:
     image: mongo:7.0-rc
     container_name: media.mongo
@@ -16,12 +16,22 @@ services:
       - "${MONGO_PORT-27017}:27017"
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - media-network
 
   redis:
     image: redis:6.2-alpine
     container_name: media.redis
     ports:
       - "${REDIS_PORT-6379}:6379"
+    networks:
+      - media-network
 
 volumes:
   mongodb_data:
+
+networks:
+  media-network:
+    name: media-network
+    driver: bridge
+    
