--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.1.6"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
