--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
