--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Facundo Zarate",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.388.0",
+    "@aws-sdk/lib-storage": "^3.388.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
     "body-parser": "^1.20.2",
