--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "mime-types": "^2.1.35",
     "mongoose": "^7.4.2",
     "typescript": "^5.1.6",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/mime-types": "^2.1.1",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
   }
